--- a/Ableton/style.css
+++ b/Ableton/style.css
@@ -8,158 +8,541 @@
 }
 
 body {
-    background:white;
+    font-size: 16px;
+    background:#F3F3F3;
 }
 
-.primary {
-    display: flex;
-    gap:2rem;
-    align-items:center;
-    margin-bottom: 1rem;
-    margin: 1rem 1rem   
+.main {
+    max-width: 100rem;
+    margin: 0 auto;
+    background-color: #fff;
 }
 
-.primary svg.selected {
-    fill:white;
+/* Navigation */
+.main-nav {
+    padding-top: 1.25rem;
 }
 
-.primary svg, .menu-icon{
-    z-index: 1;
+.main-nav__logo{
+    margin-left: 1.25rem;
+    margin-right: 2em;
+    margin-bottom: 1.25rem;
+    display:inline-block;
+    vertical-align: middle;
+    position:relative;
+    z-index: 30;
+    fill:black;
+    transition: 1s fill;
 }
 
-.menu-icon {
-    display:flex;
-    align-items: center;
-    gap: .5rem;
+.main-nav__logo.selected {
+    fill: white;
+}
+
+.main-nav__logo__image {
+    display: block;
+    width: 3.75em;
+    height: 1.75em;
+}
+
+
+.main-nav__trigger-label {
+    transform: translateY(-0.5rem);
+    display:inline-block;
+    position:relative;
+    z-index: 30;
+    transition: 1s color;
     cursor:pointer;
 }
 
-.menu-icon.selected {
-    color:white;
+.main-nav__trigger-label.selected {
+    color: white;
 }
 
-.menu-icon svg{
-    transform: rotate(180deg) translateY(-50%);
+.main-nav__trigger-label svg{
+    transform: rotate(180deg);
+    margin-left:.2em;
+    width:.4em;
+    height:.4em;
+    transition: 1s fill;
 }
-.menu-icon svg.selected{
+
+.main-nav__trigger-label svg.selected{
+    transform: rotate(0);
     fill:white;
-    transform: rotate(0deg) translateY(1px);
 }
 
-.main-nav__seperator{
+.main-nav__primary-wrapper {
+    position: absolute;
+    width:100%;
+    background:blue;
+    top: 0;
+    left: 0;
+    padding-top: 4.375rem;
+    padding-left: 0.9375rem;
+    padding-right: 0.9375rem;
+    z-index: 20;    
+    transform: translateY(-100%);
+    transition: transform .5s;
+}
+
+.main-nav__primary-wrapper.selected {
+    transform: translateY(0);
+}
+
+.main-nav__seperator {
     display: block;
     height: 0;
     border-top: 2px solid #eee;
 }
 
-.secondary {
-    margin: 1rem 1rem;
-}
-
-.secondary ul{
-    display: flex;
-    list-style: none;
-    font-size:.7em;
-    gap:1rem;
-}
-
-.secondary ul li a {
-    color: black;
-    text-decoration: none;
-}
-.secondary ul li a.selected {
-    color: #ff764d
-}
-
-.menu-items{
-    position: absolute;
-    top:-100%;
-    left:0;
-    padding:60px 15px 0 15px;
-    width: 100%;
-    background: blue;
-    transition: top .5s;
-}
-
-.menu-items.selected {
-    top:0;
-}
-
-.main-menu {
-    list-style: none;
-    display:flex;
-    flex-direction: column;
-    gap:1.8rem;
-}
-
-.main-menu li a {
-    text-decoration:none;
-    color:white;
-    cursor:pointer;
-}
-ul.main-menu li:last-child{
-    margin-top:-.9rem;;
-}
-ul.main-menu li:last-child a{
-    font-size:.7rem;
-}
-
-.menu-section {
-    margin-top: 1.6rem;
-    color:white;
-}
-
-.menu-section h3 , .menu-sub-section h3{
-    font-size: 1.1rem;
-    font-weight: 400;
-    margin-bottom:.5rem;
-}
-
-.menu-section ul {
+.main-nav__link-list {
     list-style:none;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    margin-bottom: 2rem;
 }
 
-.menu-section ul li {
-    margin-top:.7rem;
+.main-nav__link-list li:nth-child(8){
+    display:none;
 }
 
-.menu-section ul a, .menu-sub-section ul li a{
-    text-decoration:none;
+.main-nav__link-list li a {
     color: white;
-    font-size:.7rem;
-    font-weight:400;
+    text-decoration: none;
+
 }
 
-.menu-sub-section {
-    margin:2rem 0;
+.more-Button {
+    cursor: pointer;
+}
+
+.main-nav__section {
     color: white;
 }
 
-.menu-sub-section ul{
+.main-nav__section h3 {
+    margin-bottom: 10px;
+}
+
+.main-nav__section ul{
+    list-style: none;
+
+}
+
+.main-nav__section ul li a{
+    text-decoration: none;
+    color: white;
+}
+.main-nav__section_main {
+    margin-bottom: 2rem;
+}
+.main-nav__section_main ul{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.main-nav__section_secondary ul{
+    display: flex;
+    gap: 1rem;
     width: 100%;
     overflow-x: auto;
     overflow-y: hidden;
     white-space: nowrap;
 }
 
-.menu-sub-section ul li{
-    display:inline-block;
+.main-nav__section_secondary ul li a{
+    display: inline-block;
+    width: 17rem;
+    white-space: normal;
+    margin-right: 1rem;
+    vertical-align: top;
+}
+
+.main-nav__section_secondary h4 {
+    margin-bottom: 1rem;
+}
+
+.main-nav__section_secondary p {
+    line-height: 1.7rem;
+}
+
+.secondary ul{
     list-style:none;
-    width: 15rem;
+    display: flex;
+    margin: 1rem;
+    gap: 1rem;
 }
-.menu-sub-section ul li a {
+.secondary ul li a{
+    text-decoration: none;
+    color: black;
+}
+
+
+/* Navigation Finished*/
+
+/* Body */
+.page-about__header {
+    background-image: url("img/header.avif");
+    background-color: #eee;
+    width:798px;
+    height:807px;
+    background-size: cover;
+    background-position: 50% 50%;
+    margin-left: 8.33333vw;
+    margin-right: 8.33333vw;
+    margin-bottom: 8.33333vw;
+    min-height: calc(100vh - 120px);
+    position: relative;
+}
+
+.page-about__header__ableton-logo {
+    position: absolute;
+    width: 430px;
+    height: 104px;
+    top:40%;
+    left:20%;
+}
+
+.page-about__text {
+    width: 44rem;
+    margin: 0 auto;
+}
+.body-text h1 {
+    font-size: 1.2rem;
+    line-height:1.8rem;
+    font-weight: 500;
+    margin-bottom:1rem;
+}
+.body-text p {
+    font-size: .8rem;
+    line-height:1.4rem;
+    font-weight: 400;
+}
+
+.body-text h1 a{
     text-decoration:none;
-    color: white;
 }
 
-.menu-sub-section h4 {
-    margin-bottom:.4rem;
+.image-section {
+    margin: 3rem 0;
+    padding-top: 8.33333vw;
+    padding-bottom: 8.33333vw;
 }
-.menu-sub-section p {
-    line-height:1.2rem;
+.page-about__collage {
+    position: relative;
 }
 
-/* BreakingPoints
-1280px Fonts get smaller for Nav
+.page-about__collage > img:nth-child(1){
+    position:relative;
+    z-index:1;
+    width: 45vw;
+    height: 45vw;
+    left: 10vw;  
+}
 
-1023px nav bar becomes mobile friendly */
+.collage-wrapper{
+    background:#FBFFA7;
+    width: 58vw;
+    height: 62vw;
+    position: absolute;
+    top:0;
+    right:0;
+}
+.collage-wrapper img{
+    position:absolute;
+    right:5vw;
+    top:20vw;
+    width: 55%;
+} 
+
+
+.page-about__collage_2 {
+    position: relative;
+}
+.page-about__collage_2 > img {
+    position:absolute;
+    top:30%;
+    right:5%;
+    width: 40vw;
+}
+
+.collage-wrapper_2 {
+    background: #B6FFC0;
+    width: 60vw;
+    padding: 5rem 0;
+    display: flex;
+    flex-direction: column;
+    gap:4rem;
+    align-items:center;
+}
+
+.collage-wrapper_2 img{
+    margin-left:-5rem;
+    width: 65%;
+}
+
+.page-about__collage_3 {
+    width: 80vw;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.page-about__collage_3 img{
+    width: 100%;
+}
+
+.page-about__collage_4 {
+
+    position:relative;
+}
+
+.page-about__collage_4_wrapper {
+    background:#D5B3FF;
+    width: 75vw;
+    height: 60vw;
+    margin: 0 auto;
+}
+
+.page-about__collage_4_wrapper img:nth-child(1) {
+    width: 40%;
+    position: absolute;
+    left:6%;
+    top:30%;
+}
+.page-about__collage_4_wrapper img:nth-child(2) {
+    width: 40%;
+    height: 60%;
+    position: absolute;
+    right:0;
+    top:20%;
+}
+
+.page-about__collarge_5_wrapper{
+    margin: 0 auto;
+    width: 88vw;
+    background: #B1C5FF;
+}
+
+.page-about__collarge_5_wrapper img {
+    width: 100%;
+}
+
+.page-about__collarge_5_wrapper h1 {
+    font-size: 1.3rem;
+    font-weight:500;
+    padding: 4rem;
+    line-height: 2rem;
+}
+
+.page-about__collarge_5_wrapper h1 a {
+    margin-top:1rem;
+    display:inline-block;
+    text-decoration: none;
+}
+/* Body finished */
+
+/* footer */
+    .footer {
+        display:grid;
+        grid-template-columns: 1fr;
+        gap:1.5rem;
+        /* background: grey; */
+        padding: 0 3rem;
+    }
+
+    .footer h2{
+        font-size:2.5rem;
+        font-weight:500;
+    }
+
+    .footer div h3 {
+        font-size: 1rem;
+        font-weight:600;
+        margin-bottom:.2rem;
+    }
+
+    .footer > * {
+        /* background: olive; */
+    }
+
+    .footer div ul {
+        list-style: none;
+    }
+    .footer div ul a{
+        text-decoration:none;
+    }
+    .email-input {
+        display: flex;
+        margin-top:1rem;
+    }
+    .email-input input{
+        border:none;
+        outline:none;
+        background: #eee;
+        width:85%;
+        border-radius: .2rem;
+        padding-left:1rem;
+    }
+    .email-input button{
+        border:none;
+        outline:none;
+        background: blue;
+        color:white;
+        padding: .5rem 1rem;
+        width:15%;
+    }
+
+    .footer-component ul li {
+        margin-bottom:.3rem;
+    }
+    .footer-component ul li a {
+        color: black;
+    }
+    .social-icons svg{
+        width:2.5rem;
+        margin-right: .5rem;
+    }
+    .social-icons svg:nth-child(1){
+        background:blue;
+    }
+    .social-icons svg:nth-child(2){
+        background:lightblue;
+    }
+    .social-icons svg:nth-child(3){
+        background:red;
+    }
+    .social-icons svg:nth-child(4){
+        background:orange;
+    }
+/* footer finish */
+
+@media screen and (min-width:1024px){
+
+    .primary{
+        font-size:.9rem;
+    }
+    
+    .main-nav__trigger-label {
+        display: none;
+    }
+
+    .main-nav__logo{
+        position: absolute;
+    }
+    .main-nav__primary-wrapper {
+        position: static;
+        padding-top: 0;
+        padding-left: 0;
+        transform: none;
+        transition: none;
+        background:white;
+    }
+    .main-nav__link-list {
+        display: flex;
+        padding-left: 5.6rem;
+        list-style: none;
+        flex-direction: row;
+        height: 1.75em;
+        align-items:  center;
+        gap:0;
+        margin-bottom: 1.25rem;
+    }
+
+    .main-nav__link-list li {
+        margin-left:0rem;
+        padding-right: 0.625rem;
+        padding-left: 0.625rem;        
+    }
+    .main-nav__link-list li:nth-child(1){
+        padding-left: 0;  
+    }
+
+    .main-nav__link-list li:nth-child(8){
+        margin-right: auto;
+        display:list-item;
+    }
+    
+    .main-nav__link-list li:nth-child(8){
+        color:orange;
+    }
+
+    .main-nav__link-list li:nth-child(9) a{
+        color:blue;
+    }
+
+    .main-nav__link-list li a {
+        text-decoration: none;
+        color: black;
+    }
+    
+    .main-nav__more {
+        padding-top: 0.625rem;
+        padding-bottom: 1.875rem;
+        padding-left: 1.25rem;
+        padding-right: 1.25rem;
+    }
+
+    .main-nav__section {
+        color: black;
+    }
+
+    .main-nav__section h3 {
+        font-size:1.5rem;
+        font-weight: 600;
+    }
+
+    .main-nav__section ul li a {
+        color: black;
+    }
+
+    .main-nav__section_main ul{
+        flex-direction: row;
+    }
+
+    .main-nav__section_main ul li:nth-child(5) a{
+        color:orange;
+    }    
+    
+    .main-nav__more.selected{
+        display: none;
+    }
+
+    .main-nav__section_secondary ul {
+        display:flex;
+        overflow-x: unset;
+        overflow-y: unset;
+    }
+
+    .main-nav__section_secondary p {
+        line-height: 1.7rem;
+    }
+
+
+    /* footer */
+
+    .footer {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .footer h2{
+        grid-column: 1 / 4;
+    }
+
+    .social {
+        grid-column: 1;
+        grid-row:2;
+    }
+
+    .education {
+        grid-column: 2;
+        grid-row:2;
+    }
+    .footer-menu {
+        grid-column: 1/ 3;
+        grid-row:4;
+    }
+    /* footer End*/
+}
