--- a/Ableton/style.css
+++ b/Ableton/style.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
+@import url('https://fonts.cdnfonts.com/css/futura-pt');
+
+                
 *{
     margin:0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Roberto", sans-serif;
+    font-family: "futura-pt","Roberto", sans-serif;
 }
 
 body {
@@ -362,12 +365,12 @@ body {
     }
 
     .footer h2{
-        font-size:2.5rem;
-        font-weight:500;
+        font-size:2.1rem;
+        font-weight:600;
     }
 
     .footer div h3 {
-        font-size: 1rem;
+        font-size: .9rem;
         font-weight:600;
         margin-bottom:.2rem;
     }
@@ -558,7 +561,6 @@ body {
         line-height: 1.7rem;
     }
 
-
     /* footer */
 
     .footer {
@@ -603,4 +605,47 @@ body {
         width: 30%;
     }
     /* footer End*/
+}
+
+@media screen and (min-width:1080px){
+    .footer__seperator{
+        display: block;
+        height: 0;
+        border-top: 2px solid #eee;
+        padding-bottom: 8.3rem;
+    }
+    .footer {
+        padding: 0 8rem;
+        gap: 4rem;
+    }
+    .footer h2 {
+        font-size: 3rem;
+        margin-bottom: 0rem;
+    }
+}
+
+@media screen and (min-width:1280px){
+    .page-about__collarge_5_wrapper {
+        display: flex;
+        width: 80vw;
+        height: 40vw;
+    }
+    .page-about__collarge_5_wrapper img{
+        width: 50%;
+    }
+
+    .body-text {
+        width: 25vw;
+        margin: 0 auto;
+        align-self: center;
+    }
+    
+    .page-about__collarge_5_wrapper h1{
+        font-weight: 600;
+        font-size: 1.5rem;
+        letter-spacing: .1rem;
+        line-height: 2.5rem;
+        padding:0;
+        margin:0;
+    }
 }
