--- a/Abstract/style.css
+++ b/Abstract/style.css
@@ -6,6 +6,7 @@
     --button-color_2:#4C5FD5;
     --black-color:#000000;
     --blue-color:blue;
+    --link-color:#4C5FD5;;
     --white-color:#ffffff;
     --header-open-color:#191a1b;
     --header-open-border-color:rgba(255,255,255,.5);
@@ -38,8 +39,9 @@
 * {
     margin: 0;
 }
-input, button, textarea, select {
+input, button, textarea, select,a {
     font: inherit;
+    color:inherit;
 }
 
 /* body setup */
@@ -75,14 +77,23 @@ header {
     fill: var(--white-color);
     width: 7.875rem;
 }
-
 .page-menu {
     color:var(--white-color);
     font-size:1.3rem;
 }
-
 .page-menu i:first-child{
     margin-right:.5rem;
+}
+
+.page-menu .fa-bars,.page-menu .fa-magnifying-glass{
+    cursor:pointer;
+}
+.fa-magnifying-glass{
+    transition: transform .3s;
+}
+
+.fa-magnifying-glass:hover {
+    transform: scale(1.3);
 }
 .page-button-container{
     position:absolute;
@@ -95,6 +106,7 @@ header {
     display:flex;
     justify-content: center;
     align-items:center;
+    z-index: 1;
 }
 .page-button-active{
     display:none;
@@ -220,34 +232,129 @@ section{
 .function-container{
     display:grid;
     grid-template-columns: 1fr;
-    padding:3rem;
-}
-
-.function-container img{
-    width: 40px;
-    height: 40px;
+    gap:4rem;
+    max-width: 1600px;
+    width: 80%;
+    margin: 7rem auto;
 }
 
 .function-item {
     display:flex;
+    gap:1rem;
+}
+
+.function-item img {
+    max-width:70px;
+    max-height:70px;
+}
+
+.function-item-description > * {
+    margin-bottom: 1rem;
+}
+
+.function-item-description a{
+    text-decoration:none;
+    color: var(--link-color);
+}
+
+@media screen and (min-width:48rem){
+    .function-container{
+        grid-template-columns: 1fr 1fr;
+        margin: 10rem auto 7rem auto;
+    }
+    .function-item img {
+        max-width:100px;
+        max-height:100px;
+    }    
 }
 
 /*footer styling */
 footer{
+    --heading-size: 1.6rem;
     background-color: var(--black-color);
+    color:var(--white-color);
+    padding: 3rem 1rem;
+}
+
+.footer-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap:3rem;
+}
+
+.footer-function-item h4 {
+    margin-top:1rem;
+}
+
+.footer-function-item h3 {
+    font-size: var(--heading-size);
+    margin-bottom: 1rem;
+}
+
+.footer-function-item ul {
+    list-style: none;
+    padding:0;
+}
+.footer-function-item ul li{
+    margin-bottom:.4rem;
+}
+
+.footer-function-item ul li a,.footer-function-item a{
+    text-decoration: none;
 }
 
 .abstract-logo-footer{
     width:100px;
 }
 
+.copy-right {
+    width: 15.1875rem;
+    margin-top:1rem;
+    font-size:1.2rem;
+}
+
+@media screen and (min-width:633px){
+    footer{
+        position:relative;
+        padding: 3rem 2rem;
+    }
+    .footer-container {
+        width:45vw;
+    }
+    .copy-right {
+        position:absolute;
+        right:0;
+        bottom:0;
+        transform: translateY(-22%);
+        margin-right: 24px;
+    }
+}
+
+@media screen and (min-width:769px){
+    footer{
+        padding: 3rem 5rem;
+    }
+    .footer-container {
+        width:78vw;
+    }
+    .copy-right {
+        position:relative;
+        display:inline-block;
+        right: -66%;
+        transform:none;
+        margin-top:3rem;
+    }
+}
+
+
+@media screen and (min-width:1000px){
+    .footer-container {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        width: 57vw;
+    }
+    .copy-right {
+        right: -83%;
+        transform: translateY(5%);
+    }
+}
 /*  */
-
-h2{
-    font-weight:700;
-}
-
-p{
-    font-weight:400;
-    font-size: 1.5rem;
-}
