--- a/Bonsai/style.css
+++ b/Bonsai/style.css
@@ -1,251 +1,482 @@
-/* Font Set up */
-
-@font-face {
-  font-family: "Gellix";
-  src: url("./fonts/Gellix-Thin.woff") format("woff");
-  font-weight: 100;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Gellix";
-  src: url("./fonts/Gellix-Light.woff") format("woff");
-  font-weight: 300;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Gellix";
-  src: url("./fonts/Gellix-Regular.woff") format("woff");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Gellix";
-  src: url("./fonts/Gellix-Medium.woff") format("woff");
-  font-weight: 500;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Gellix";
-  src: url("./fonts/Gellix-SemiBold.woff") format("woff");
-  font-weight: 600;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Gellix";
-  src: url("./fonts/Gellix-Bold.woff") format("woff");
-  font-weight: 700;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Gellix";
-  src: url("./fonts/Gellix-ExtraBold.woff") format("woff");
-  font-weight: 800;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Gellix";
-  src: url("./fonts/Gellix-Black.woff") format("woff");
-  font-weight: 900;
-  font-style: normal;
-}
-
-/* CSS reset */
-/*
-    1. Use a more-intuitive box-sizing model.
-  */
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-/*
-    2. Remove default margin
-  */
 * {
-  margin: 0;
-  padding: 0;
-}
-
-/*
-    3. Allow percentage-based heights in the application
-  */
-html,
-body {
-  height: 100%;
-}
-
-/*
-    Typographic tweaks!
-    4. Add accessible line-height
-    5. Improve text rendering
-  */
-body {
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-}
-
-/*
-    6. Improve media defaults
-  */
-img,
-picture,
-video,
-canvas,
-svg {
-  display: block;
-  max-width: 100%;
-}
-
-/*
-  7. Remove built-in form typography styles
-*/
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-/*
-  8.Remove default styles for ul and a
-*/
-ul {
-  list-style: none;
-}
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-/* Custom variables */
-
-:root {
-  --font-color-green-200: #22ad01;
-  --font-color-green-300: #65816d;
-  --font-color-green-400: rgba(101, 129, 109, 0.7);
-  --font-color-green-500: #003c2f;
-  --font-color-gray: gray;
-
-  --buttn-color-50: #f2f7f2;
-  --button-color-100: #2bb90a;
-  --button-color-200: #22ad01;
-
-  --line-color: rgba(171, 185, 180, 0.3);
-
-  --font-size-xs: 0.75rem; /* 12px */
-  --font-size-sm: 0.875rem; /* 14px */
-  --font-size-base: 1rem; /* 16px */
-  --font-size-lg: 1.125rem; /* 18px */
-  --font-size-xl: 1.25rem; /* 20px */
-  --font-size-2xl: 1.5rem; /* 24px */
-  --font-size-3xl: 1.875rem; /* 30px */
-  --font-size-4xl: 2.25rem; /* 36px */
-  --font-size-5xl: 3rem; /* 48px */
-  --font-size-6xl: 3.75rem; /* 60px */
-  --font-size-7xl: 4.5rem; /* 72px */
-  --font-size-8xl: 6rem; /* 96px */
-  --font-size-8xl: 8rem; /* 128px */
+  box-sizing: border-box;
 }
 
 body {
   font-size: 16px;
   font-family: "Gellix";
-  color: var(--font-color-green-500);
 }
 
-/* Navigation Desktop*/
+/* ----------------- */
+/* Components class */
+/* ----------------- */
+
+.button.is-small {
+  padding: 10px 20px 12px;
+  line-height: 100%;
+}
+.button.is-text {
+  color: #003c2f;
+  background-color: transparent;
+}
+.button.is-text:hover {
+  background-color: #f2f7f2;
+}
+
+.button {
+  color: #fff;
+  text-align: center;
+  background-color: #22ad01;
+  border-style: none;
+  border-radius: 36px;
+  padding: 12px 56px 14px;
+  font-weight: 500;
+  line-height: 140%;
+  transition: background-color 0.3s;
+}
+.button:hover {
+  /* color: #fff; */
+  background-color: #2bb90a;
+}
+.button.is-secondary {
+  color: #003c2f;
+  background-color: transparent;
+  border: 2px solid #003c2f;
+}
+
+.line-bottom {
+  border-bottom: 2px solid var(--line-color);
+}
+/* ----------------- */
+/* nav-bar-container */
+/* ----------------- */
+
 header {
-  max-width: 82rem;
-  margin: 0 auto;
+  width: 100%;
+  min-height: 70px;
+  height: 73px;
+  position: fixed;
 }
-.nav-wrapper {
-  padding: 0 1rem;
-  margin-top: 1.3rem;
-}
-.desktop-nav-wrapper {
-  --menu-gap: 1.5rem;
-  /* background-color: rgba(255, 0, 0, 0.534); */
-}
-.desktop-main-nav {
+
+.nav-bar-container {
+  --header-padding-y: 24px;
+
+  width: 100%;
+  max-width: 1360px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 40px;
+  padding-right: 40px;
   position: relative;
 }
-.main-nav-logo {
-  /* background-color: grey; */
-  position: absolute;
-  top: 3px;
-}
-.desktop-main-nav nav {
-  margin-left: 11rem;
+
+.first-nav-bar {
   display: flex;
+}
+
+.nav-bar-brand {
+  margin-right: 3rem;
+  display: flex;
+  align-items: center;
+  min-width: 100px;
+}
+
+.nav-menu-wrapper {
+  display: flex;
+  width: 100%;
   justify-content: space-between;
 }
-.desktop-main-nav nav ul {
-  /* background-color: green; */
-  display: flex;
-  list-style: none;
-  gap: var(--menu-gap);
+
+/* --------------- */
+/* first-nav-menu */
+/* --------------- */
+
+.first-nav-menu {
   color: var(--font-color-green-300);
   font-weight: 500;
 }
-.desktop-main-nav nav ul li:hover {
-  color: var(--button-color-100);
-}
-.sign-up {
-}
-.sign-up a:first-child {
-  margin-right: 0.6rem;
-  font-weight: 500;
-}
-.sign-up a:last-child {
-  background-color: var(--button-color-100);
-  color: white;
-  padding: 10px 20px 12px;
-  border-radius: 36px;
-  font-weight: 500;
-}
-.line {
-  width: 100%;
-  border-top: 0.5px solid var(--line-color);
-  margin-top: 1.3rem;
-}
-.desktop-secondary-nav ul {
+.first-nav-menu-list {
   display: flex;
-  list-style: none;
-  margin-top: 0.3rem;
-  color: var(--font-color-green-400);
-  font-weight: 500;
-  gap: var(--menu-gap);
 }
-.mobile-nav-wrapper {
-  display: none;
+.first-nav-menu-list-item {
+  list-style-type: none;
+}
+.first-nav-menu-title {
+  cursor: pointer;
+  padding: var(--header-padding-y) 14px;
 }
 
-.product-drop-menu {
+.first-nav-menu-list > li:hover .first-nav-menu-title {
+  color: var(--font-color-green-200);
+}
+.first-nav-menu-list-item:hover .menu-dropdown-container {
+  display: block;
+}
+
+/* ----------------- */
+/* second-nav-menu */
+/* ----------------- */
+
+.second-nav-menu > ul {
   display: flex;
-  background-color: yellow;
+  height: 100%;
+  align-items: center;
+}
+.second-nav-menu > ul li {
+  list-style-type: none;
+}
+
+/* --------------------- */
+/* menu-dropdown         */
+/* --------------------- */
+.menu-dropdown-container {
   position: fixed;
   width: 100%;
   left: 0;
-  margin-top: 23px;
-  justify-content: center;
-  gap: 5rem;
+  box-shadow: 0 24px 40px -20px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  display: none;
+  background: white;
 }
-.product-drop-menu ul h2,
-.product-drop-menu div h2 {
-  font-size: var(--font-size-base);
+.menu-dropdown {
+  display: flex;
+  max-width: 1360px;
+  padding: 0 40px;
+  margin: 0 auto;
+  font-size: 16px;
+  font-weight: 500;
+}
+.menu-dropdown-panel {
+  display: flex;
+  width: 100%;
+  padding: 46px 0;
+  color: var(--font-color-green-300);
+  justify-content: space-between;
+  border-top: 2px solid var(--line-color);
+}
+.menu-dropdown-panel > * {
+  width: 100%;
+  max-width: 274px;
+}
+.menu-dropdown-panel ul {
+  list-style-type: none;
+}
+.menu-dropdown-panel ul li {
+  padding: 6px 0;
+  cursor: pointer;
+}
+.menu-dropdown-panel ul li:hover a {
+  color: var(--font-color-green-200);
+}
+.menu-dropdown-panel > * > h3 {
+  margin-bottom: 10px;
+  color: var(--font-color-green-500);
+  font-size: 16px;
   font-weight: 600;
 }
-.product-drop-menu div img {
-  width: 8rem;
+
+.menu-dropdown-panel__image-wrapper {
+  background-color: #f2f7f2;
+  width: 128px;
+  height: 82px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  overflow: hidden;
+}
+.menu-dropdown-panel__image-wrapper img {
+  width: 95px;
+  border-top-left-radius: 10px;
+  box-shadow: -7px 19px 20px -4px rgba(0, 0, 0, 0.11);
+}
+.menu-dropdown-panel__image-block p {
+  margin-top: 8px;
+}
+.menu-dropdown-panel__image-block a {
+  margin-top: 10px;
+  font-size: 14px;
+  color: var(--font-color-green-200);
+  font-weight: 600;
+  position: relative;
+  display: inline-block;
+}
+.menu-dropdown-panel__image-block a:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 3px;
+  left: 0;
+  background-color: var(--font-color-green-200);
+  transform-origin: bottom left;
+  transition: transform 0.5s ease-out;
+  transform: scaleX(1);
 }
 
-@media screen and (max-width: 62rem) {
-  /* Navigation Mobile*/
-  .desktop-nav-wrapper {
+.menu-dropdown-panel__image-block a:hover:after {
+  transform: scaleX(0);
+  transform-origin: bottom right;
+}
+
+/* menu-dropdown tabs */
+
+.menu-dropdown-tabPanel {
+  display: flex;
+  width: 100%;
+  border-top: 2px solid var(--line-color);
+}
+.menu-dropdown_col1 {
+  border-right: 2px solid var(--line-color);
+  padding-right: 10px;
+  padding-top: 10px;
+  max-width: 300px;
+  flex: 1;
+
+  color: var(--font-color-green-600);
+}
+.menu-dropdown_col1 ul {
+  list-style-type: none;
+}
+.menu-dropdown_col1 ul li {
+  padding: 8px 16px;
+  cursor: pointer;
+}
+.menu-dropdown_col1 ul li:hover,
+.menu-dropdown__col2_body ul li:hover a {
+  color: var(--font-color-green-200);
+}
+.menu-dropdown_col1_tab.active p {
+  background-image: url("img/arrow-right.svg");
+  background-repeat: no-repeat;
+  background-position-x: right;
+  background-size: 18px;
+  background-position-y: 3px;
+}
+.menu-dropdown_col1_tab.active {
+  color: var(--font-color-green-200);
+  background-color: #f2f7f2;
+  border-radius: 3px;
+}
+.menu-dropdown_col2 {
+  padding: 28px 60px;
+  width: 100%;
+  flex: 1;
+}
+.menu-dropdown_col2_content {
+  display: none;
+  animation: moving 1s ease;
+  color: var(--font-color-green-300);
+}
+@keyframes moving {
+  from {
+    /* transform: translateX(50px); */
+    opacity: 0;
+  }
+  to {
+    /* transform: translateX(0px); */
+    opacity: 1;
+  }
+}
+.content_box .content.active {
+  display: block;
+}
+.menu-dropdown_col2_content.active {
+  display: block;
+}
+.menu-dropdown__col2_title {
+  padding-bottom: 14px;
+  font-size: 13px;
+  font-weight: 500;
+  color: var(--font-color-green-300);
+  opacity: 0.5;
+}
+.menu-dropdown__col2_body {
+  display: flex;
+}
+.menu-dropdown__col2_body ul {
+  display: flex;
+  list-style-type: none;
+  flex-direction: column;
+  flex: 1;
+}
+.menu-dropdown__col2_body ul li {
+  padding-bottom: 10px;
+}
+.menu-dropdown__col2_body ul li:hover {
+  cursor: pointer;
+}
+.menu-dropdown__col2_body ul li a {
+  text-decoration: none;
+}
+.menu-dropdown__col2_footer {
+  margin-top: 20px;
+  text-align: center;
+}
+.menu-dropdown__col2_footer a {
+  color: var(--font-color-green-200);
+  position: relative;
+}
+.menu-dropdown__col2_footer a:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -3px;
+  left: 0;
+  background-color: var(--font-color-green-200);
+  transform-origin: bottom left;
+  transition: transform 0.5s ease-out;
+  transform: scaleX(1);
+}
+.menu-dropdown__col2_footer a:hover:after {
+  transform: scaleX(0);
+  transform-origin: bottom right;
+}
+/* second-nav-bar Styling */
+.second-nav-bar {
+  position: relative;
+  transition: transform 0.5s, opacity 0.3s;
+}
+.second-nav-bar.is-scrolled {
+  transform: translateY(-150px);
+  opacity: 0;
+}
+.second-nav-bar > ul {
+  display: flex;
+  margin-top: 8px;
+  gap: 1rem;
+}
+.second-nav-bar > ul li {
+  list-style-type: none;
+  cursor: pointer;
+}
+.second-nav-bar > ul li:hover a {
+  color: var(--font-color-green-500);
+}
+.second-nav-bar > ul li a {
+  color: var(--font-color-green-300);
+  opacity: 0.7;
+  font-weight: 500;
+  text-decoration: none;
+  letter-spacing: 0.5px;
+}
+
+.box-shadow {
+  width: 100%;
+  height: 117px;
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  transition: box-shadow 1s, height 0.3s;
+}
+
+.box-shadow.is-scrolled {
+  box-shadow: 0 0 20px 7px rgba(0, 0, 0, 0.1);
+  height: 100%;
+}
+
+.mobile-nav {
+  display: none;
+}
+/* ----------- */
+/* Mobile Nav  */
+/* ----------- */
+
+.mobile-nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: var(--header-padding-y) 0;
+}
+
+.mobile-nav-menu-container {
+  position: fixed;
+  width: 100%;
+  top: -100%;
+  left: 0;
+  transition: top 0.5s, opacity 0.3s;
+  opacity: 0;
+  padding: 0 var(--mobile-nav-side-padding);
+  padding: 20px 40px;
+}
+.mobile-nav-menu-container.active {
+  top: 78px;
+  opacity: 1;
+  height: 80vh;
+  overflow: scroll;
+}
+
+.mobile-nav-menu-wrapper {
+  color: var(--font-color-green-500);
+  font-weight: 700;
+}
+
+.mobile-nav-menu-title.direct:hover {
+  color: var(--font-color-green-200);
+}
+
+.mobile-nav-menu-title {
+  display: flex;
+  cursor: pointer;
+  padding: 30px 0;
+  justify-content: space-between;
+}
+.mobile-nav-menu-title.active {
+  color: var(--font-color-green-200);
+}
+.mobile-nav-menu-dropdown {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  color: var(--font-color-green-300);
+  font-weight: 500;
+}
+.mobile-nav-menu-dropdown ul li {
+  cursor: pointer;
+  padding: 3px 0;
+}
+.mobile-nav-menu-dropdown ul li:hover a {
+  color: var(--font-color-green-200);
+}
+.mobile-nav-menu-dropdown ul li a {
+  text-decoration: none;
+}
+.mobile-nav-menu-dropdown.active {
+  height: 100%;
+}
+.mobile-nav-menu-icon-wrapper {
+  width: 20px;
+  height: 20px;
+}
+.mobile-nav-menu-icon-wrapper img {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.2s;
+}
+.mobile-nav-menu-icon-wrapper img.active {
+  transform: rotate(180deg);
+}
+.mobile-nav-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.mobile-nav-buttons button {
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 991px) {
+  .desktop-nav,
+  .box-shadow {
     display: none;
   }
-  .mobile-nav-wrapper {
-    display: flex;
-    justify-content: space-between;
+  .mobile-nav {
+    display: block;
   }
+}
+
+/* Spacer */
+.spacer {
+  padding-top: 100rem;
 }
