--- a/Bonsai/style.css
+++ b/Bonsai/style.css
@@ -786,8 +786,11 @@ input:checked ~ .slider .yearly-sub {
   .card-body-button {
     margin: 0px auto 0;
   }
+  .section-1 {
+    padding-top: 117px;
+    padding-bottom: 120px;
+  }
 }
-
 @media only screen and (max-width: 570px) {
   .section-1-title h2 {
     font-size: 50px;
