--- a/Bonsai/style.css
+++ b/Bonsai/style.css
@@ -16,6 +16,10 @@ body {
   padding: 10px 20px 12px;
   line-height: 100%;
 }
+.button.is-medium {
+  padding-left: 40px;
+  padding-right: 40px;
+}
 .button.is-text {
   color: #003c2f;
   background-color: transparent;
@@ -1093,5 +1097,132 @@ input:checked ~ .slider .yearly-sub {
   }
   .section-4-image-wrapper {
     margin-left: 0px;
+  }
+}
+/* section-5 */
+.section-5 {
+  padding-top: 120px;
+  padding-bottom: 80px;
+}
+.section-5-container {
+  padding: 0 40px;
+  margin: 0 auto;
+  max-width: 1144px;
+}
+.section-5-wrapper {
+  display: flex;
+  justify-content: space-around;
+  margin: 0 auto;
+}
+.section-5-image-wrapper {
+  position: relative;
+  max-width: 540px;
+}
+.leave-image {
+  max-width: 250px;
+  position: absolute;
+  top: -9px;
+  right: 69px;
+}
+.side-pane {
+  max-width: 390px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 30px;
+}
+.side-pane h3 {
+  color: #003c2f;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 100%;
+}
+.side-pane p {
+  color: #65816d;
+  letter-spacing: 0;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 120%;
+}
+.section-5-box {
+  background-color: #003c2f;
+  background-image: url("img/pattern.png");
+  background-position: 50%;
+  background-size: cover;
+  border-radius: 25px;
+  padding: 40px 110px 50px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 120px;
+}
+.section-5-box p {
+  font-size: 36px;
+  line-height: 120%;
+  color: white;
+}
+.section-5-box-button {
+  display: flex;
+  align-items: center;
+}
+.get-started,
+.customer-support {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.get-started-button {
+  margin-top: 10px;
+}
+.customer-support a {
+  margin-top: 10px;
+  font-size: 14px;
+  color: var(--font-color-green-200);
+  font-weight: 600;
+  position: relative;
+  display: inline-block;
+}
+
+.customer-support a:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 3px;
+  left: 0;
+  background-color: var(--font-color-green-200);
+  transform-origin: bottom left;
+  transition: transform 0.5s ease-out;
+  transform: scaleX(1);
+}
+
+.customer-support a:hover:after {
+  transform: scaleX(0);
+  transform-origin: bottom right;
+}
+
+@media only screen and (max-width: 991px) {
+  .section-5-wrapper {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+  .section-5-image-wrapper {
+    max-width: 455px;
+  }
+  .section-5-box {
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    gap: 20px;
+  }
+}
+@media only screen and (max-width: 717px) {
+  .section-5-box p {
+    font-size: 25px;
+  }
+}
+@media only screen and (max-width: 515px) {
+  .section-5-box {
+    padding: 40px 42px 50px;
   }
 }
